@@ -3259,6 +3259,18 @@ void SPVM_OP_CHECKER_check_tree(SPVM_COMPILER* compiler, SPVM_OP* op_root, SPVM_
                       is_valid = 0;
                     }
                   }
+                  // Dist type is numeric array type except for byte array
+                  else if (SPVM_TYPE_is_numeric_array_type(compiler, dist_type->basic_type->id, dist_type->dimension, dist_type->flag)) {
+                    if (dist_type->basic_type->id == src_type->basic_type->id) {
+                      is_valid = 1;
+                    }
+                    else if (SPVM_TYPE_is_any_object_type(compiler, src_type->basic_type->id, src_type->dimension, src_type->flag)) {
+                      is_valid = 1;
+                    }
+                    else {
+                      is_valid = 0;
+                    }
+                  }
                   // Dist type is any object type
                   else if (SPVM_TYPE_is_any_object_type(compiler, dist_type->basic_type->id, dist_type->dimension, dist_type->flag)) {
                     if (SPVM_TYPE_is_numeric_type(compiler, src_type->basic_type->id, src_type->dimension, src_type->flag)) {
@@ -3311,7 +3323,7 @@ void SPVM_OP_CHECKER_check_tree(SPVM_COMPILER* compiler, SPVM_OP* op_root, SPVM_
               if (!is_valid) {
                 const char* src_type_name = SPVM_TYPE_new_type_name(compiler, src_type->basic_type->id, src_type->dimension, src_type->flag);
                 const char* dist_type_name = SPVM_TYPE_new_type_name(compiler, dist_type->basic_type->id, dist_type->dimension, dist_type->flag);
-                SPVM_COMPILER_error(compiler, "Can't convert %s to %s in type conversion at %s line %d", src_type_name, dist_type_name, op_src->file, op_src->line);
+                SPVM_COMPILER_error(compiler, "Can't perform the type cast from %s to %s at %s line %d", src_type_name, dist_type_name, op_src->file, op_src->line);
                 return;
               }
             }
