@@ -74,6 +74,8 @@ Revision history for SPVM
         * Fix the bug that multi-dimensional array can't assing to any object array "object[]".
         * Fix the bug that SPVM::Builder::Util::API::create_make_rule_native can't detect native file extension.
         * Fix the bug that unboxing type conversion doesn't throw the exception.
+        * Fix the bug that type cast to numeric array compilation error is wrong.
+        * Improve the message of type cast compilation error.
         
         [NON BACKWORD COMPATIBLE CHANGES]
         * Remove -O|--optimize option from spvmcc.
